<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true" />

    <RelativeLayout
        android:id="@+id/controls_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <View
            android:id="@+id/drop_shadow_top"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/ayp_drop_shadow_top"
            android:visibility="gone" />

        <View
            android:id="@+id/drop_shadow_bottom"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ayp_drop_shadow_bottom"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/extra_views_container"
            android:ellipsize="end"
            android:lines="1"
            android:padding="8dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/extra_views_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ayp_background_item_selected"
                android:clickable="true"
                android:contentDescription="@string/ayp_open_video_in_youtube"
                android:focusable="true"
                android:src="@drawable/ayp_ic_menu_24dp"

                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:background="@drawable/ayp_background_item_selected"

            android:clickable="true"
            android:contentDescription="@string/ayp_play_button"
            android:focusable="true"
            android:padding="8dp"

            android:src="@drawable/ayp_ic_play_36dp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.ui.views.YouTubePlayerSeekBar
                android:id="@+id/youtube_player_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:maxHeight="100dp"
                app:color="@color/ayp_red"

                app:fontSize="12sp" />

            <TextView
                android:id="@+id/live_video_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/ayp_live"

                android:textColor="@android:color/white"
                android:textSize="12sp"

                android:visibility="gone" />

            <ImageView
                android:id="@+id/youtube_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ayp_background_item_selected"
                android:clickable="true"

                android:contentDescription="@string/ayp_open_video_in_youtube"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ayp_ic_youtube_24dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/fullscreen_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ayp_background_item_selected"
                android:clickable="true"

                android:contentDescription="@string/ayp_full_screen_button"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ayp_ic_fullscreen_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/custom_action_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="32dp"

            android:layout_toStartOf="@+id/play_pause_button"
            android:background="@drawable/ayp_background_item_selected"

            android:clickable="true"
            android:contentDescription="@string/ayp_custom_action_left"
            android:focusable="true"
            android:padding="8dp"

            android:src="@drawable/ayp_ic_play_36dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/custom_action_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:layout_margin="32dp"

            android:layout_toEndOf="@+id/play_pause_button"
            android:background="@drawable/ayp_background_item_selected"

            android:clickable="true"
            android:contentDescription="@string/ayp_custom_action_right"
            android:focusable="true"

            android:padding="8dp"

            android:src="@drawable/ayp_ic_play_36dp"
            android:visibility="gone" />

    </RelativeLayout>
</FrameLayout>
